--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": ["next", "prettier"],
+	"plugins": ["@stylistic"],
+	"rules": {
+		"@stylistic/quotes": [2, "double", { "avoidEscape": true }]
+	}
 }
