--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
 		"format": "prettier . -w -l"
 	},
 	"dependencies": {
+		"@emotion/cache": "^11.13.1",
 		"@emotion/react": "^11.13.3",
 		"@emotion/styled": "^11.13.0",
 		"@mui/material": "^5.16.7",
+		"@mui/material-nextjs": "^5.16.6",
 		"next": "14.2.6",
 		"react": "^18",
 		"react-dom": "^18"
